--- a/src/bin/web_page.html
+++ b/src/bin/web_page.html
@@ -246,11 +246,8 @@
         
         alert("About to open WebSocket!");
         let websocket = new WebSocket("ws://192.168.1.1:43822", "test");
-        websocket.onopen = event => {
-            alert("WebSocket transitioned to open!");
-        }
-        websocket.onerror = event => {
-            alert("WebSocket could not be opened...");
+        websocket.onmessage = event => {
+            alert("Got data! Size: " + event.data.size);
         }
 
         // Mouse event handlers for panning
