--- a/src/bin/web_page.html
+++ b/src/bin/web_page.html
@@ -245,7 +245,7 @@
         let startTimePerDiv = 0;
         
         alert("About to open WebSocket!");
-        let websocket = new WebSocket("ws://192.168.1.1:43822", "test");
+        let websocket = new WebSocket("ws://" + window.location.host + ":43822", "test");
         websocket.onmessage = async event => {
             let data = new Float64Array(await event.data.arrayBuffer())
             addPoint(data[1], data[0]);
