--- a/src/bin/web_page.html
+++ b/src/bin/web_page.html
@@ -55,6 +55,7 @@
             right: 0;
             background: rgba(0, 0, 0, 0.8);
             padding: 15px;
+            padding-top: 50px;
             border-left: 1px solid #00ff00;
             border-bottom: 1px solid #00ff00;
             transform: translateX(100%);
@@ -177,20 +178,34 @@
             left: 50%;
             transform: translateX(-50%);
         }
+
+        .download-button {
+            width: 100%;
+            margin-top: 20px;
+            padding: 8px;
+            background: #006600;
+            border: 1px solid #00ff00;
+            color: #00ff00;
+            cursor: pointer;
+        }
+
+        .download-button:hover {
+            background: #008800;
+        }
     </style>
 </head>
 
 <body>
 
     <div class="scope-container">
-        <div class="axis-control vertical" id="voltageControl">⬍</div>
-        <div class="axis-control horizontal" id="timeControl">⬌</div>
+        <div class="axis-control vertical" id="voltageControl">V</div>
+        <div class="axis-control horizontal" id="timeControl">T</div>
         <div class="scale-indicator vertical" id="voltageIndicator"></div>
         <div class="scale-indicator horizontal" id="timeIndicator"></div>
         <canvas id="oscilloscope"></canvas>
         <div class="axis-label y-axis-label">Voltage (V)</div>
         <div class="axis-label x-axis-label">Time (s)</div>
-        <button id="toggleControls">☰</button>
+        <button id="toggleControls">Menu</button>
         <div class="zoom-info">Use two fingers to zoom, one finger to pan</div>
 
         <div class="controls-overlay">
@@ -204,15 +219,7 @@
                 <input type="number" id="timePerDiv" value="0.5" step="0.1" min="0.1">
                 <span>s</span>
             </div>
-            <div class="control-group">
-                <label>Time:</label>
-                <input type="number" id="newTime" placeholder="seconds">
-            </div>
-            <div class="control-group">
-                <label>Voltage:</label>
-                <input type="number" id="newVoltage" placeholder="volts">
-            </div>
-            <button onclick="addPointFromFields()">Add Point</button>
+            <button class="download-button" onclick="downloadCSV()">Download CSV</button>
         </div>
     </div>
 
@@ -390,9 +397,10 @@
         window.addEventListener('resize', resizeCanvas);
         resizeCanvas();
 
-        // Toggle controls visibility
+        // Update menu button position when menu opens/closes
         toggleButton.addEventListener('click', () => {
             controls.classList.toggle('visible');
+            toggleButton.classList.toggle('menu-open');
         });
 
         // Show zoom info temporarily
@@ -604,6 +612,30 @@
             voltsPerDiv = parseFloat(document.getElementById('voltsPerDiv').value);
             timePerDiv = parseFloat(document.getElementById('timePerDiv').value);
             drawData();
+        }
+
+        function downloadCSV() {
+            // Create CSV content
+            const csvContent = [
+                'Time (s),Voltage (V)', // Header row
+                ...data.map(point => `${point.time},${point.voltage}`)
+            ].join('\n');
+
+            // Create blob and download link
+            const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+            const link = document.createElement('a');
+            const url = URL.createObjectURL(blob);
+
+            // Set up download
+            link.setAttribute('href', url);
+            link.setAttribute('download', 'oscilloscope_data.csv');
+            link.style.visibility = 'hidden';
+
+            // Add to document, click, and remove
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+            URL.revokeObjectURL(url);
         }
 
         // Add input event listeners
